# deadbeef

./: Makefile  configure.ac
plugins/dsd/: Makefile.am  dsd.c
plugins/dsd/libdsd/: bitstream.c  bitstream.h  callbacks.h  decoder.c  decoder.h  dsdiff_format.h  dsf_format.h  endian.h  export.h  libdsd.c  libdsd.h  metadata.h  typedefs.h
plugins/dsd/libdsd/include/: callbacks.h  decoder.h  export.h  libdsd.h  metadata.h  typedefs.h
plugins/dsd/libdsd/libdstdec/: CMakeLists.txt  dst_fram.c
plugins/dsd/libdsd/src/: decoder.c  output.c
plugins/dsd/libdsd/src/include/: dsdiff_format.h  dsf_format.h  libdsd_endian.h  output.h
